--- a/Rafael Deroncio/scr/webapi.crud.dundermifflin/webapi.crud.dundermifflin.csproj
+++ b/Rafael Deroncio/scr/webapi.crud.dundermifflin/webapi.crud.dundermifflin.csproj
@@ -15,6 +15,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
   </ItemGroup>
 
 </Project>
