API MVC com servidor de identidade

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "AllowedHosts": "*",
+  "URLIdentityServer": "http://localhost:5218",
   "ConnectionStrings": {
     "conexao": "server=localhost;database=api_in_inglish_anima;user=root;password=root"
   }
